src/Apttus Quote/Proposal-Configuration Integration/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <description>Accept the quote/proposal</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;), HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCreateBill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCreateRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Revenue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account associated with the quote/proposal</description>
        <inlineHelpText>ID of the bill to account associated with the quote/proposal</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Bill To)</relationshipLabel>
        <relationshipName>QuotesBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfigurationFinalizedDate__c</fullName>
        <description>Date when the configuration was finalized for the quote/proposal</description>
        <label>Configuration Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the quote/proposal</description>
        <inlineHelpText>Date when the configuration was synchronized for the quote/proposal</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Configure__c</fullName>
        <description>Configure products for the quote/proposal</description>
        <formula>IF ( LEN( PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PODate__c</fullName>
        <description>The purchase order date</description>
        <inlineHelpText>The purchase order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the quote/proposal</description>
        <inlineHelpText>ID of the payment term associated with the quote/proposal</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Quotes/Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadyForActivationDate__c</fullName>
        <description>The date the order is ready for activation. The order is activated on this date.</description>
        <inlineHelpText>The date the order is ready for activation. The order is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadyForBillingDate__c</fullName>
        <description>The date when the order is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadyForFulfillmentDate__c</fullName>
        <description>The date the order is ready for fulfillment. The order is fulfilled on this date.</description>
        <inlineHelpText>The date the order is ready for fulfillment. The order is fulfilled on this date.</inlineHelpText>
        <label>Ready For Fulfillment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadyForRevRecDate__c</fullName>
        <description>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account associated with the quote/proposal</description>
        <inlineHelpText>ID of the ship to account associated with the quote/proposal</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Ship To)</relationshipLabel>
        <relationshipName>QuotesShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SyncWithOpportunity__c</fullName>
        <description>Synchronize the quote/proposal with the associated opportunity</description>
        <formula>IF ( AND(LEN(Apttus_Proposal__Opportunity__c ) &gt; 0, Apttus_Proposal__Primary__c) , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalSyncWithOpportunity?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_SynchronizeWithOpportunity&quot;, &quot;Sync with Opportunity&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synchronize with Opportunity</label>
        <type>Text</type>
    </fields>
</CustomObject>